client-src/view/theme.css
.view {
  position: relative;
  background: var(--md-white);
  width: 100vw;
  height: 100vh;
  overflow: hidden;

  display: flex;
  justify-content: flex-start;
  align-items: flex-start;

  & .header {
    /*
      z-index: 10;

    */
    border-bottom: 1px solid var(--md-dark-text-dividers);
    background: transparent;
    color: var(--mdc-theme-text-primary-on-light);
  }


  & .drawer:not(.modal) {
    z-index: 1;
    position: relative;
    background: transparent;
    border: none;
  }

  & .body {
    z-index: 1;
    position: relative;
    flex: 1;
    height: 100%;
    min-width: 0;
  }
}

